[gd_scene load_steps=4 format=3 uid="uid://jv22188ku53m"]

[ext_resource type="Theme" uid="uid://dko7c3ogpxpix" path="res://Theme/theme.tres" id="1_6kyb0"]
[ext_resource type="Texture2D" uid="uid://3g18axpijiuu" path="res://art/fantasy empty playboard.png" id="1_yf2bf"]
[ext_resource type="Script" path="res://Scenes/recap_screen.gd" id="2_p0j0i"]

[node name="RecapScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_6kyb0")
script = ExtResource("2_p0j0i")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yf2bf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -394.5
offset_top = -228.5
offset_right = 394.5
offset_bottom = 228.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Recap" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Recap Label"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to main menu"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
